--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,8 +80,11 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
+    - family: AntonSC
+    - fonts:
+        - asset: assets/fonts/AntonSC-Regular.ttf
     - family: FontMain
-      fonts:
+    - fonts:
         - asset: assets/fonts/Comfortaa-Bold.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
