--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,10 +63,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    -  assets/images/
-    -  assets/image/
-    -  assets/logo/
-    -  assets/DJ/
+    - assets/images/
+    - assets/image/
+    - assets/logo/
+    - assets/DJ/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -80,12 +80,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-   # - family: AntonSC
-   # - fonts:
-    #    - asset: assets/fonts/AntonSC-Regular.ttf
     - family: FontMain
-    - fonts:
+      fonts:
         - asset: assets/fonts/Comfortaa-Bold.ttf
+   #   family:
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
