--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.8.0
   image_picker: ^1.2.0
+  permission_handler:
 
 dev_dependencies:
   flutter_test:
