--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.5.0
   font_awesome_flutter: ^10.8.0
   image_picker: ^1.2.0
   permission_handler:
+
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +72,7 @@ flutter:
     - assets/DJ/
     - assets/tikawoo/
     - assets/onboarding/
+    - assets/Ecomm/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
