--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   image_picker: ^1.2.0
   permission_handler:
+  firebase_core: ^4.1.1
+  cloud_firestore: ^6.0.2
+  firebase_auth: ^6.1.0
+  google_sign_in: ^7.2.0
 
 
 dev_dependencies:
