--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^6.0.2
   firebase_auth: ^6.1.0
   google_sign_in: ^7.2.0
+  video_player: ^2.10.0
 
 
 dev_dependencies:
