--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   firebase_auth: ^6.1.0
   google_sign_in: ^7.2.0
   video_player: ^2.10.0
+  intl: ^0.20.2
+  flutter_map: ^8.2.2
+  geolocator: ^14.0.2
 
 
 dev_dependencies:
@@ -55,7 +58,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  intl: ^0.20.2
   google_fonts: ^6.2.0
 
 # For information on the generic Dart part of this file, see the
@@ -80,6 +82,7 @@ flutter:
     - assets/Ecomm/
     - assets/Blinkit/
     - assets/videos/
+    - assets/Insta/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
